vista de productos

--- a/fronted/src/app/components/tareas/tareas.component.html
+++ b/fronted/src/app/components/tareas/tareas.component.html
@@ -1,8 +1,13 @@
-<ul class="list-group">
+
+<div class="container">
+  <app-lista-producto></app-lista-producto>
+</div><div class="container">
+  <ul class="list-group">
     <li class="list-group-item" *ngFor="let tarea of tareas">
       {{ tarea._id }} : {{ tarea.name }} : {{ tarea.description }}
     </li>
   </ul>
- 
+
+</div> 
   
   
