--- a/fronted/src/app/components/Seguridad/privatetasks/privatetasks.component.html
+++ b/fronted/src/app/components/Seguridad/privatetasks/privatetasks.component.html
@@ -1,13 +1,14 @@
 
-  <div>
+  <div class="container p-4">
     <h2> productos</h2>
-    <app-product-form></app-product-form>
+      
+     <app-subir-producto></app-subir-producto>
+      
   </div>
-
-  <h1>Private Tasks</h1>
+  <!-- <h1>Private Tasks</h1>
 <ul class="list-group">
     <li class="list-group-item" *ngFor="let tarea of tareas">
       {{ tarea._id }} : {{ tarea.name }} : {{ tarea.description }}
     </li>
-  </ul>
+  </ul> -->
   
