--- a/fronted/src/app/components/Seguridad/privatetasks/privatetasks.component.html
+++ b/fronted/src/app/components/Seguridad/privatetasks/privatetasks.component.html
@@ -2,8 +2,7 @@
   <div class="container p-4">
     <h2> productos</h2>
       
-     <app-subir-producto></app-subir-producto>
-      
+    <app-admin-index></app-admin-index>
   </div>
   <!-- <h1>Private Tasks</h1>
 <ul class="list-group">
