--- a/fronted/src/app/components/admin/admin-nav/admin-nav.component.html
+++ b/fronted/src/app/components/admin/admin-nav/admin-nav.component.html
@@ -7,13 +7,10 @@
       <li><a routerLink="/pedidos">Pedidos</a></li>
       <li><a routerLink="/configuracion">Configuración</a></li>
       <li><a routerLink="/ayuda">Ayuda</a></li>
-<<<<<<< HEAD
-    
-=======
->>>>>>> main
     </ul>
   </div>
+
   <div class="content">
-  
+   <!-- <app-admin-index></app-admin-index> -->
   </div>
 </div>
