--- a/fronted/src/styles.css
+++ b/fronted/src/styles.css
@@ -2,3 +2,6 @@
 /* src/styles.scss */
 @import '~bootstrap/dist/css/bootstrap.css';
 @import "~@fortawesome/fontawesome-free/css/all.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
