--- a/fronted/src/app/components/admin/admin-index/admin-index.component.css
+++ b/fronted/src/app/components/admin/admin-index/admin-index.component.css
@@ -4,8 +4,6 @@ mat-sidenav {
 }
 
 /* Ajustar el margen izquierdo del contenido principal */
-mat-sidenav-content {
-  margin-left: 250px; /* Debe coincidir con el ancho del menú lateral */
-  max-height: 800vh; /* Ajusta el valor según tus necesidades */
-  overflow-y: auto; /* Agregar desplazamiento vertical si es necesario */ 
+.content{
+  height: calc(100vh - 65px);
 }
