--- a/fronted/src/app/components/admin/admin-index/admin-index.component.html
+++ b/fronted/src/app/components/admin/admin-index/admin-index.component.html
@@ -2,16 +2,14 @@
   <!-- Sidenav (menú lateral) -->
   <mat-sidenav mode="side" opened>
     <!-- Contenido del sidenav -->
-   <app-admin-nav></app-admin-nav>
+    <app-admin-nav></app-admin-nav>
   </mat-sidenav>
 
-  <!-- Contenido principal -->
   <mat-sidenav-content>
-    <!-- Barra de navegación superior -->
-        
-    <!-- Contenido principal -->
-    <div class="main-content">
+    <div class="content mat-elevation-z14">
       <!-- Colocar aquí el contenido principal de tu página -->
-      <app-admin-index></app-admin-index> </div>
+      <app-lista-producto></app-lista-producto>
+    </div>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
