--- a/fronted/src/app/components/pagina-web-inicial/pagina-web-inicial.component.html
+++ b/fronted/src/app/components/pagina-web-inicial/pagina-web-inicial.component.html
@@ -1,10 +1,13 @@
 <div class="marketing-component">
   <div class="header">
-    <img src="assets/imagenes/Tarima_blocs.jpg" alt="Grupo Flores" class="image">
+    
+        <img src="assets/imagenes/Tarima_blocs.jpg" alt="Grupo Flores" class="image mat-elevation-z10">
     <div class="image-overlay">
       <div class="title">Grupo Flores</div>
       <div class="subtitle">Compra calidad, no cantidad!</div>
     </div>
+  
+  
   </div>
   
   <div class="text-section">
