--- a/fronted/src/app/components/admin/admin-index/admin-index.component.html
+++ b/fronted/src/app/components/admin/admin-index/admin-index.component.html
@@ -7,12 +7,13 @@
   <!-- Sidenav (menú lateral) -->
   <mat-sidenav #sidena="matSidenav" [mode]="sidenavMode" [opened]="sidenavOpened">
     <!-- Contenido del sidenav -->
-    <app-admin-nav></app-admin-nav>
+    <app-admin-nav [sidenav]="sidena"></app-admin-nav>
+
   </mat-sidenav>
 
   <mat-sidenav-content>
     <div class="content mat-elevation-z14">
-      <!-- Colocar aquí el contenido principal de tu página -->
+      <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
