--- a/fronted/src/app/components/admin/admin-index/admin-index.component.html
+++ b/fronted/src/app/components/admin/admin-index/admin-index.component.html
@@ -13,7 +13,7 @@
 
   <mat-sidenav-content>
     <div class="content mat-elevation-z14">
-      <router-outlet></router-outlet>
+      <!-- <router-outlet></router-outlet> -->
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
