Cambios de one Page

--- a/fronted/src/app/components/pagina-web-inicial/pagina-web-inicial.component.html
+++ b/fronted/src/app/components/pagina-web-inicial/pagina-web-inicial.component.html
@@ -1,85 +1,82 @@
 <div class="marketing-component">
   <div class="header">
-    
-        <img src="assets/imagenes/Tarima_blocs.jpg" alt="Grupo Flores" class="image mat-elevation-z10">
+    <img src="assets/imagenes/Tarima_blocs.jpg" alt="Grupo Flores" class="image mat-elevation-z10">
     <div class="image-overlay">
       <div class="title">Grupo Flores</div>
       <div class="subtitle">Compra calidad, no cantidad!</div>
     </div>
-  
-  
   </div>
-  
-  <div class="text-section">
-    <br>
-    <h5>Nuestra Mision</h5>
-    <p>Somos una empresa unida (Grupo Flores), con 30 años de trabajo en la
-      elaboración de blocs y tabicón para construcción. Nuestro producto beneficia a
-      las familias con ánimos de construir para realizar sus sueños de tener un hogar
-      propio.
-    
-      Nuestra empresa da un bloque de calidad firme y seguro, ya que vemos por la
-      seguridad de nuestros clientes y el gusto por preferirnos. Para ello, utilizamos
-      materias primas de primera calidad que nos diferencia de la demás
-      competencia</p>
-  </div>
+  <section id="mision" class="col-lg-12 col-md-6">
+    <div class="text-section">
+   <br>
+   <h3>Nuestra Misión</h3>
+   <p>Somos una empresa unida (Grupo Flores), con 30 años de trabajo en la
+     elaboración de blocs y tabicón para construcción. Nuestro producto beneficia a
+     las familias con ánimos de construir para realizar sus sueños de tener un hogar
+     propio.
+   
+     Nuestra empresa da un bloque de calidad firme y seguro, ya que vemos por la
+     seguridad de nuestros clientes y el gusto por preferirnos. Para ello, utilizamos
+     materias primas de primera calidad que nos diferencia de la demás
+     competencia</p>
+ </div>
+  </section>
   <hr class="separator">
-  <div class="text-section">
-    <br>
-    <h5>Nuestra Vision</h5>
-    <p>Buscamos ser la primera surtidora de bloques reconocida por nuestros clientes dentro
-      del Estado de México. Llegaremos a nuestra meta por medio de nuestra lealtad y
-      confianza de nuestros clientes, así como nuestro compromiso por la mejora constante y
-      la innovación en nuestro sector</p>
-  </div>
+  <section id="vision" class="col-lg-12 col-md-6">
+    <div class="text-section">
+      <br>
+      <h3>Nuestra Vision</h3>
+      <p>Buscamos ser la primera surtidora de bloques reconocida por nuestros clientes dentro
+        del Estado de México. Llegaremos a nuestra meta por medio de nuestra lealtad y
+        confianza de nuestros clientes, así como nuestro compromiso por la mejora constante y
+        la innovación en nuestro sector</p>
+    </div>
+  </section> 
   <hr class="separator">
-  <div class="values-train">
-    <div class="train">
-      <div class="train-item">
-        <div class="value-item">
-          <h5>Honestidad</h5>
-          <p class="description">La empresa de Grupo Flores se ha colocado en ser honesta puesto que nuestros clientes nunca se han quejado por ninguna pieza faltante o que les quedemos sin dar su material.</p>
+  <section>
+    <h3>VALORES</h3>
+    <div class="values-train"> 
+      <div class="train">
+        <div class="train-item">
+          <div class="value-item">
+            <h5>Honestidad</h5>
+            <p class="description">La empresa de Grupo Flores se ha colocado en ser honesta puesto que nuestros 
+    clientes nunca se han quejado por ninguna pieza faltante o que les quedemos sin dar su material.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="train">
-      <div class="train-item">
-        <div class="value-item">
-          <h5>Puntualidad</h5>
-          <p class="description">Grupo Flores ha sido siempre puntual en sus pedidos el día en el que se pacta la entrega, ese día se recibe.</p>
+      <div class="train">
+        <div class="train-item">
+          <div class="value-item">
+            <h5>Puntualidad</h5>
+            <p class="description">Grupo Flores ha sido siempre puntual en sus pedidos el día en el que se pacta 
+    la entrega, ese día se recibe.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="train">
-      <div class="train-item">
-        <div class="value-item">
-          <h5>Calidad</h5>
-          <p class="description">Nuestra calidad ha sido siempre la mejor, nuestra competencia no ha podido igualarla y nuestros clientes son testigos.</p>
+      <div class="train">
+        <div class="train-item">
+          <div class="value-item">
+            <h5>Calidad</h5>
+            <p class="description">Nuestra calidad ha sido siempre la mejor, nuestra competencia no ha podido 
+    igualarla y nuestros clientes son testigos.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="train">
-      <div class="train-item">
-        <div class="value-item">
-          <h5>Confianza</h5>
-          <p class="description">Nuestros trabajadores no trabajan por trabajar, sino por la confianza que nos tienen, y los clientes también han sido siempre fieles a nuestra empresa.</p>
+      <div class="train">
+        <div class="train-item">
+          <div class="value-item">
+            <h5>Confianza</h5>
+            <p class="description">Nuestros trabajadores no trabajan por trabajar, sino por la confianza que nos 
+    tienen, y los clientes también han sido siempre fieles a nuestra empresa.</p>
+          </div>
         </div>
       </div>
+      
     </div>
-    
-  </div>
+  </section>  
   <hr class="separator">
-   <p>Comparte nuestra página:</p>
-  <div class="icon-container">
-    <a href="https://www.facebook.com/sharer/sharer.php?u=URL_DE_TU_PAGINA" class="icon facebook-icon"><i class="fab fa-facebook"></i></a>
-  <a href="whatsapp://send?text=URL_DE_TU_PAGINA" class="icon whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
-  <a href="https://www.messenger.com/share?url=URL_DE_TU_PAGINA" class="icon messenger-icon"><i class="fab fa-facebook-messenger"></i></a>
-  <a href="https://www.instagram.com/?url=URL_DE_TU_PAGINA" class="icon instagram-icon"><i class="fab fa-instagram"></i></a>
- <!-- Agrega más enlaces con íconos y colores para otras plataformas si lo deseas -->
-  </div>
-
-  <hr class="separator">
-  <p>¿Donde estamos ubicados?</p>
+  <h3>¿Donde estamos ubicados?</h3>
     <div class="icons-section">
        <div class="share-icons">
       <app-map></app-map>
