--- a/fronted/src/app/components/Compartidos/bottom-bar/bottom-bar.component.css
+++ b/fronted/src/app/components/Compartidos/bottom-bar/bottom-bar.component.css
@@ -32,3 +32,40 @@
   
   /* Agrega más estilos según tus preferencias */
   
+
+/* mas estilos  */   
+.icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  margin: 0;
+  padding: 0;
+}
+
+.icon {
+  font-size: 48px;
+  margin:  15px; /* Espacio horizontal entre íconos */
+  transform: scale(1);
+  transition: transform 0.3s ease;
+}
+
+.icon:hover {
+  transform: scale(1.2);
+}
+
+.facebook-icon {
+  color: #1877F2;
+}
+
+.whatsapp-icon {
+  color: #25D366;
+}
+
+.messenger-icon {
+  color: #0084FF;
+}
+
+.instagram-icon {
+  color: #C13584;
+}
