--- a/fronted/src/app/components/Compartidos/footer/footer.component.html
+++ b/fronted/src/app/components/Compartidos/footer/footer.component.html
@@ -1,25 +1,33 @@
- <hr class="separator">
-  <p>Redes Sociales</p>
- <div class="icon-container">
-   <a href="https://www.facebook.com/sharer/sharer.php?u=URL_DE_TU_PAGINA" class="icon facebook-icon" 
-target="_blank"><i class="fab fa-facebook"></i></a>
- <a href="whatsapp://send?text=URL_DE_TU_PAGINA" class="icon whatsapp-icon" ><i class="fab fa-whatsapp"></i></a>
- <a href="https://www.messenger.com/share?url=URL_DE_TU_PAGINA" class="icon messenger-icon" target="_blank"><i 
-class="fab fa-facebook-messenger"></i></a>
- <a href="https://www.instagram.com/?url=URL_DE_TU_PAGINA" class="icon instagram-icon" target="_blank" ><i class="fab 
-fa-instagram"></i></a>
-<!-- Agrega más enlaces con íconos y colores para otras plataformas si lo deseas -->
- </div>
- <hr class="separator">
-
-
-
-
-
-
-
-
- 
-
-
-
+<div class="bottom-bar">
+  <div class="company-info">
+   <!-- <h4>Grupo Flores </h4> -->
+   <p>Somos una empresa unida, con 30 años de trabajo en la
+     elaboración de blocs y tabicón para construcción.</p>
+     <div class="contact-info">
+       <div class="contact-numbers">
+         <span>Teléfono: (+52) 56 33 69 37 98</span><br>
+         <span>Email: GrupoFlores@gmail.com</span><br>
+         <span>Dirección: Manzana 006, Ixtapalcalco, 54666 Coyotepec, Méx.</span>
+       </div>
+        <div class="address">
+          <p>Comparte nuestra página:</p>
+            <div class="icon-container">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=URL_DE_TU_PAGINA" class="icon facebook-icon"><i 
+            class="fab fa-facebook"></i></a>
+            <a href="whatsapp://send?text=URL_DE_TU_PAGINA" class="icon whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.messenger.com/share?url=URL_DE_TU_PAGINA" class="icon messenger-icon"><i class="fab 
+            fa-facebook-messenger"></i></a>
+              <a href="https://www.instagram.com/?url=URL_DE_TU_PAGINA" class="icon instagram-icon"><i class="fab 
+            fa-instagram"></i></a>
+            <!-- Agrega más enlaces con íconos y colores para otras plataformas si lo deseas -->
+          </div>
+       </div>
+     </div>
+  </div>
+  <!-- <div class="menu-links"> -->
+   <!-- <a href="#">Principal</a> -->
+   <!-- <a href="#">Sobre Grupo Flores</a> -->
+   <!-- <a href="#">Mision</a> -->
+   <!-- <a href="#">Contacto</a> -->
+  <!-- </div> -->
+</div>
