--- a/fronted/src/app/components/map/map.component.html
+++ b/fronted/src/app/components/map/map.component.html
@@ -1,3 +1,3 @@
 
-<div #mapContainer style="width: 100%; height: 400px;"></div>
+<div #mapContainer style="width: 100%; height: 400px;"></div><br>
  
