--- a/fronted/src/app/components/pagina-web-inicial/pagina-web-inicial.component.css
+++ b/fronted/src/app/components/pagina-web-inicial/pagina-web-inicial.component.css
@@ -24,7 +24,7 @@
   justify-content: flex-end;
   padding: 20px;
   box-sizing: border-box;
-  background-color: rgba(0, 0, 0, 0.7);
+  /* background-color: rgba(153, 140, 140, 0.7); */
   color: #fff;
 }
 
