--- a/fronted/src/app/components/Seguridad/privatetasks/privatetasks.component.html
+++ b/fronted/src/app/components/Seguridad/privatetasks/privatetasks.component.html
@@ -1,12 +1,13 @@
 
   
-   
-    <app-admin-index></app-admin-index>
+   <h1>es Privacidad</h1>
+    <!-- <app-admin-index></app-admin-index> -->
   
-  <!-- <h1>Private Tasks</h1>
+  <h1>Private Tasks</h1>
+<!--   
 <ul class="list-group">
     <li class="list-group-item" *ngFor="let tarea of tareas">
       {{ tarea._id }} : {{ tarea.name }} : {{ tarea.description }}
     </li>
-  </ul> -->
-  
+  </ul>
+   -->
