Reajustes de carpetas

--- a/fronted/src/app/components/Compartidos/bienvenidos/bienvenidos.component.html
+++ b/fronted/src/app/components/Compartidos/bienvenidos/bienvenidos.component.html
@@ -1,1 +1,13 @@
-<p>bienvenidos works!</p>
+<div class="fondo container-fluid">
+    <h2 class="center">
+        <i class="fa-solid fa-house-user"></i>
+          BIENVENIDO 
+    </h2>
+
+    <div class="up">
+        Usuario: {{ nombre || 'Usuario' }} 
+        <br>
+        {{ apellidoPaterno || '' }} {{ apellidoMaterno || '' }}
+    </div>
+
+   </div>
