--- a/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.html
+++ b/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.html
@@ -2,10 +2,10 @@
   <div class="header">
     <!-- <img src="assets/imagenes/Tarima_blocs.jpg" alt="Grupo Flores" class="image mat-elevation-z10"> -->
     <app-slider></app-slider>
-    <div class="image-overlay">
-      <div class="title">Grupo Flores</div>
-      <div class="subtitle">Compra calidad, no cantidad!</div>
-    </div>
+    <!-- <div class="image-overlay"> -->
+      <!-- <div class="title">Grupo Flores</div> -->
+      <!-- <div class="subtitle">Compra calidad, no cantidad!</div> -->
+    <!-- </div> -->
   </div>
   <section id="mision" class="col-lg-12 col-md-6">
     <div class="text-section">
