--- a/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.scss
+++ b/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.scss
@@ -45,7 +45,7 @@
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: oblique;
   font-size-adjust: initial;
-  color: #176edf ;
+  color: #a8abaf ;
 }
 
 #mision{
@@ -61,7 +61,7 @@
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: oblique;
   font-size-adjust: initial;
-  color: #176edf ;
+  color: #a8abaf ;
 }
 
 #vision{
@@ -95,7 +95,7 @@ hr {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(to bottom, #6298d6, #4daecc, #e9e3e3); /* Degradado en tonos azules */
+  background-image: linear-gradient(to bottom, #738294, #74bdd3, #80898a); /* Degradado en tonos azules */
   margin: 0 10px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -127,7 +127,7 @@ h3{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: oblique;
   font-size-adjust: initial;
-  color: #176edf ;
+  color: #a8abaf ;
   padding-top: 2px;
 }
 
