--- a/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
+++ b/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
@@ -9,7 +9,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home">Grupo Flores</a>
+    <a class="navbar-brand" routerLink="/bienvenido">Grupo Flores</a>
 
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
