--- a/fronted/src/app/app.component.html
+++ b/fronted/src/app/app.component.html
@@ -1,11 +1,13 @@
 
 <app-dropdown-menu></app-dropdown-menu>
+<router-outlet></router-outlet>
 
-<app-bottom-bar></app-bottom-bar>
-<!--  -->
+
+<app-footer></app-footer>
+
 <!-- <app-slider></app-slider> -->
 <!-- <app-sidebar></app-sidebar> -->
-
-
+<!-- <app-admin-login></app-admin-login> -->
+<!-- <app-iniciar></app-iniciar> -->
 
 
