--- a/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
+++ b/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
@@ -1,15 +1,6 @@
-<!-- app.component.html -->
-
-<!-- <div *ngIf="authService.loggedIn()" class="d-lg-none">
-  <button mat-icon-button (click)="toggleSidenav()">
-    <mat-icon *ngIf="!sidenav?.opened">menu</mat-icon>
-    <mat-icon *ngIf="sidenav?.opened">close</mat-icon>
-  </button>
-</div> -->
-
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/bienvenido">Grupo Flores</a>
+    <a class="navbar-brand" routerLink="/home">Grupo Flores</a>
 
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -84,5 +75,5 @@
   </div>
 </nav>
 <div class="container">
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
 </div>
