--- a/fronted/src/app/components/Compartidos/slider/slider.component.html
+++ b/fronted/src/app/components/Compartidos/slider/slider.component.html
@@ -1,4 +1,3 @@
-<p>slider works! compartidos</p>
 <div class="container">
     <div id="inner" class="inner">        
         <div class="images-wrapper" #imgDiv (click)="selectedCard ($event)"> </div>
@@ -7,7 +6,9 @@
 
 
         <div class="slider__nav">
-            <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" [value]    ="radioButtonId">
+            <mat-radio-group aria-labelledby="example-radio-group-label" 
+                            class="example-radio-group" 
+                            [value]="radioButtonId">
             <mat-radio-button color='primary' class="example-radio-button" *ngFor="let boton of arrUrlIMG; let  i=index" [value]="boton" [checked]="true" (click)="onClickRadioBoton(i)">
             </mat-radio-button>
             </mat-radio-group>
