--- a/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.html
+++ b/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.html
@@ -1,6 +1,5 @@
 <div class="marketing-component">
   <div class="header">
-    <!-- <img src="assets/imagenes/Tarima_blocs.jpg" alt="Grupo Flores" class="image mat-elevation-z10"> -->
     <app-slider></app-slider>
     <!-- <div class="image-overlay"> -->
       <!-- <div class="title">Grupo Flores</div> -->
@@ -80,9 +79,12 @@
   <h3>¿Donde estamos ubicados?</h3>
     <div class="icons-section">
        <div class="share-icons">
-      <app-map></app-map>
-      <!-- Coloca aquí los iconos de compartir, por ejemplo, iconos de redes sociales -->
+        <app-map></app-map>
+      </div>
     </div>
-  </div>
+  <hr class="separator">
+  <h3>Contacto</h3>
+  <app-contacto></app-contacto>
   
 </div>
+<app-footer></app-footer>
