--- a/fronted/src/app/components/Compartidos/slider/slider.component.scss
+++ b/fronted/src/app/components/Compartidos/slider/slider.component.scss
@@ -7,14 +7,17 @@
     display: block;
     position: relative;
     width: 100%;
-    max-width: 1220px;
+    // max-width: 1300px;
     margin-top: 5px;
     overflow: hidden;
-  }
+   }
   
   img {
-    padding-left: var(--paddLeft);
-    padding-right: var(--paddRight);
+    padding: 0.5%;
+    width: 100%;
+    height: 100%;
+    // margin-left: var(--paddLeft);
+    // padding-right: var(--paddRight);
   }
   img:hover {
     display: block;
@@ -34,7 +37,7 @@
     height: 60px;
     width: 60px;
     border-radius: 50%;
-    background-color: #1421b3;
+    background-color: #757786;
     opacity: 0.5;
     cursor: pointer;
   }
@@ -61,8 +64,8 @@
     border: solid white;
     border-width: 0 4px 4px 0;
     padding: 4px;
-    width: 30%;
-    height: 30%;
+    width: 10%;
+    height: 10%;
   }
   #next::after {
     top: 50%;
@@ -96,11 +99,11 @@
     .slider {
       height: 100%;
       width: 100%;
-      height: 100%;
-      margin: 0px;
+      margin: 10px;
+      padding: 10px;
     }
     img {
-      padding: 0%px;
+      padding: 5%;
       width: 100%;
       height: 100%;
     }
