--- a/fronted/src/app/components/Seguridad/error-modal/error-modal.component.html
+++ b/fronted/src/app/components/Seguridad/error-modal/error-modal.component.html
@@ -1,12 +1,12 @@
 <div class="modal-header">
-  <h5 class="modal-title">Error</h5>
+  <h3 class="modal-title alert-danger">Error</h3>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
-  <p>{{ message }}</p>
+  <p class="alert-danger alerta"><i class="fa-solid fa-triangle-exclamation"></i> {{ message }}</p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" (click)="closeModal()">Aceptar</button>
+  <button type="button" class="btn btn-mora" (click)="closeModal()">Aceptar</button>
 </div>
