--- a/fronted/src/app/components/Compartidos/bienvenidos/bienvenidos.component.html
+++ b/fronted/src/app/components/Compartidos/bienvenidos/bienvenidos.component.html
@@ -5,9 +5,7 @@
     </h2>
 
     <div class="up">
-        Usuario: {{ nombre || 'Usuario' }} 
-        <br>
-        {{ apellidoPaterno || '' }} {{ apellidoMaterno || '' }}
+        Usuario: {{ nombre || 'Usuario' }} {{ apellidoPaterno || '' }} {{ apellidoMaterno || '' }}
     </div>
 
    </div>
