--- a/fronted/src/app/components/Compartidos/bienvenidos/bienvenidos.component.scss
+++ b/fronted/src/app/components/Compartidos/bienvenidos/bienvenidos.component.scss
@@ -18,7 +18,7 @@ h2{
 .up{
     text-align: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    /* font-style: oblique; */
+    font-style: oblique;
     font-size: 3rem;
     line-height: 15px;
 
