se trabajo en almacen inserta elimina y modifica el producto

--- a/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
+++ b/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
@@ -30,7 +30,7 @@
           <mat-menu #almacenMenu="matMenu" class="mat-menu-panel" [@fadeInOut]="menuState">
             <ul class="mat-menu-content">
               <li class="mat-menu-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/dashboard/admin/Lista-P">
+                <a class="nav-link" routerLink="/dashboard/admin/list">
                   <mat-icon>list</mat-icon> Listado de Producto
                 </a>
               </li>
