color y mejoras a pantalla de bienvenido

--- a/fronted/src/app/components/Compartidos/bienvenidos/bienvenidos.component.html
+++ b/fronted/src/app/components/Compartidos/bienvenidos/bienvenidos.component.html
@@ -5,7 +5,7 @@
     </h2>
 
     <div class="up">
-        Usuario: {{ nombre || 'Usuario' }} {{ apellidoPaterno || '' }} {{ apellidoMaterno || '' }}
+        Usuario: <br> <br> <br> {{ nombre || 'Usuario' }} {{ apellidoPaterno || '' }} {{ apellidoMaterno || '' }}
     </div>
 
    </div>
