--- a/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.scss
+++ b/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.scss
@@ -1,8 +1,8 @@
 .marketing-component {
-  
-  background: #426192;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to left, #6FB1FC, #4364F7, #4d77bb);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to left, #6FB1FC, #4364F7, #367cec); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #DBDBDB;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari   5.1-6 */
+  background: linear-gradient(to top, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 
   position: relative;
